# Advanced_RAG

./: README.md  pyproject.toml  requirements.txt  setup.py  structure.txt
data/vector_store/e03a8d50-b322-4e7c-96f2-f9311e60f977/: index_metadata.pickle
notebook/: document.ipynb
src/my_app/: main.py
src/my_app/Ingestion/: pdf_ingestion.py
src/my_app/config/: hugging_face_hub.py
src/my_app/orchestration/: rag_pipeline.py
src/my_app/services/: chunking.py  embedder.py  llm.py  retrieval.py  vector_db.py
src/my_app/utils/: logger.py
src/rag_advanced.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test.py
