[project]
name = "rag-advanced"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.1",
    "chromadb>=1.4.1",
    "datasets>=4.5.0",
    "faiss-cpu>=1.13.2",
    "huggingface-hub>=1.3.5",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "logging>=0.4.9.6",
    "pymupdf>=1.26.7",
    "pypdf>=6.6.2",
    "safetensors>=0.7.0",
    "sentence-transformers>=5.2.2",
    "sentencepiece>=0.2.1",
    "transformers>=5.0.0",
]
