[project]
name = "rag-advanced"
version = "0.1.0"
description = "Advanced RAG Pipeline with Mistral"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate",
    "bitsandbytes",
    "chromadb",
    "datasets",
    "faiss-cpu",
    "fastapi",
    "huggingface-hub",
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-text-splitters",
    "pydantic",
    "pymupdf",
    "pypdf",
    "python-multipart",
    "safetensors",
    "sentence-transformers",
    "sentencepiece",
    "torch",
    "transformers",
    "uvicorn",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["my_app"]
package-dir = {"" = "src"}

[tool.uv]
managed = true
package = true

# This ensures torch is always pulled from the GPU index on Windows/Linux
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

[tool.uv.pip]
extra-index-url = ["https://download.pytorch.org/whl/cu121"]